--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -1,8 +1,12 @@
 @import "./customStyles/customStyles.scss";
 
+.main-navbar {
+  font-size: large;
+}
+
 .app-title {
   text-align: center;
-  span {
+  h1 {
     background-image: linear-gradient(
       to left,
       violet,
@@ -13,13 +17,20 @@
       orange,
       red
     );
+    display: inline-flex;
     -webkit-background-clip: text;
     color: transparent;
+    margin: 50px;
+    width: 700px;
+  }
+  h4 {
+    display: inline-flex;
+    width: 500px;
   }
 }
 
 .app-detail {
-  color: $gray-7;
+  color: $blue-5;
   text-align: center;
   .rs-divider-inner-text {
     padding: 0;
@@ -27,6 +38,9 @@
 }
 
 .translator-example {
+  background: rgba(255, 255, 255, 0.5);
+  border-radius: 20px;
+  border-color: $primary;
   display: inline-block;
-  width: 400
+  width: 400px;
 }
