--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -2,7 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  @apply h-full bg-gray-900;
+}
+
 body {
+  @apply h-full;
+  
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
