--- a/client/src/styles/landingPage.scss
+++ b/client/src/styles/landingPage.scss
@@ -11,14 +11,14 @@
         @apply lg:flex lg:flex-1 lg:justify-end;
 
         a {
-          @apply flex font-semibold leading-6 text-white text-2xl items-center gap-x-4 px-6 py-3 text-sm font-semibold leading-6 text-white hover:bg-gray-800;
+          @apply flex font-semibold leading-6 text-white text-2xl items-center gap-x-4 px-6 py-3 text-sm font-semibold leading-6 text-white hover:text-gray-300;
         }
       }
     }
   }
 
   .info {
-    @apply relative isolate overflow-hidden pt-14;
+    @apply relative isolate overflow-hidden pt-28;
 
     img {
       @apply absolute inset-0 -z-10 h-full w-full object-cover;
