--- a/client/src/styles/signupPage.scss
+++ b/client/src/styles/signupPage.scss
@@ -51,7 +51,7 @@
         }
 
         .create-button {
-          @apply mt-10 flex w-full justify-center rounded-md bg-indigo-500 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500;
+          @apply mt-10 flex w-full justify-center rounded-md bg-indigo-500 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500 disabled:bg-indigo-400 disabled:cursor-not-allowed;
         }
 
 
